# asciiart

./: .gitignore  CMakeLists.txt  LICENSE  README.md  animate.cpp  animate.hpp  args.cpp  args.hpp  asciiart.cpp  asciiart.hpp  color.hpp  config.h.in  cxxopts_wrapper.hpp  display.cpp  display.hpp  font.cpp  font.hpp  gif.cpp  gif.hpp  image.cpp  image.hpp  jpeg.hpp  main.cpp  png.hpp  sub_args.hpp
codecs/: ani.cpp  ani.hpp  avif.cpp  avif.hpp  binio.cpp  binio.hpp  bitstream.hpp  bmp.cpp  bmp.hpp  bmp_common.cpp  bmp_common.hpp  bpg.cpp  bpg.hpp  exif.cpp  exif.hpp  flif.cpp  flif.hpp  gif.cpp  gif.hpp  heif.cpp  heif.hpp  ico.cpp  ico.hpp  image.cpp  image.hpp  jp2.cpp  jp2.hpp  jpeg.cpp  jpeg.hpp  jpegxl.cpp  jpegxl.hpp  jxl.cpp  jxl.hpp  mcmap.cpp  mcmap.hpp  mng.cpp  mng.hpp  motologo.cpp  motologo.hpp  openexr.cpp  (+31 more)
decoders/: avif.cpp  avif.hpp  bmp.cpp  bmp.hpp  bpg.cpp  exif.cpp  exif.hpp  flif.cpp  gif.cpp  gif.hpp  heif.hpp  ico.hpp  image.cpp  image.hpp  jp2.cpp  jp2.hpp  jp2_color.cpp  jp2_color.hpp  jpeg.cpp  jpeg.hpp  png.cpp  png.hpp  pnm.cpp  pnm.hpp  sif.cpp  svg.cpp  svg.hpp  tga.cpp  tga.hpp  tiff.cpp  tiff.hpp  webp.cpp  webp.hpp  xpm.cpp  xpm.hpp
